Bug 77381 - Conditional formatting does not participate in UNDO/REDO
Summary: Conditional formatting does not participate in UNDO/REDO
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Calc (show other bugs)
Version:
(earliest affected)
4.2.2.1 release
Hardware: Other macOS (All)
: medium normal
Assignee: Markus Mohrhard
URL:
Whiteboard: target:4.3.0
Keywords:
Depends on:
Blocks:
 
Reported: 2014-04-13 02:13 UTC by mentin
Modified: 2014-04-24 21:45 UTC (History)
0 users

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description mentin 2014-04-13 02:13:56 UTC
Repro:
1. Create spreadsheet.
2. Add some data.
3. Select some cells and add conditional formatting, 
   e.g. using Format > Conditional Formatting > Condition.
4. Now click Undo.

Expected: 
Conditional formatting is removed.

Result: 
Conditional formatting is preserved, as can be inspected in 
Format > Conditional Formatting > Manage.
Instead, the UNDO action undoes the previous edit operation.

Note: if one created a new style in step 3, this style will be removed by UNDO.
The conditional formatting (while still preserved) will not have any style associated and thus might appear removed.
Comment 1 Commit Notification 2014-04-24 21:44:29 UTC
Markus Mohrhard committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=f2431c944376433219eb7eb704e9b21589f201f5

add undo action for conditional formatting, cp#1000050, fdo#77381



The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.