add undo action for conditional formatting, cp#1000050, fdo#77381

Change-Id: I11db1e5824077135c4352ae43cc0e8d139244268