sc/source/ui/inc/undoblk.hxx
@@ -636,6 +636,28 @@ private:
     void            DoChange( ScDocument* pSrcDoc ) const;
 };
 
+class ScUndoConditionalFormat : public ScSimpleUndo
+{
+public:
+    TYPEINFO_OVERRIDE();
+    ScUndoConditionalFormat( ScDocShell* pNewDocShell,
+            ScDocument* pUndoDoc, ScDocument* pRedoDoc, const ScRange& rRange);
+    virtual         ~ScUndoConditionalFormat();
+
+    virtual void    Undo() SAL_OVERRIDE;
+    virtual void    Redo() SAL_OVERRIDE;
+    virtual void    Repeat(SfxRepeatTarget& rTarget) SAL_OVERRIDE;
+    virtual bool    CanRepeat(SfxRepeatTarget& rTarget) const SAL_OVERRIDE;
+
+    virtual OUString GetComment() const SAL_OVERRIDE;
+
+private:
+    void DoChange(ScDocument* pDoc);
+    boost::scoped_ptr<ScDocument> mpUndoDoc;
+    boost::scoped_ptr<ScDocument> mpRedoDoc;
+    ScRange maRange;
+};
+
 
 class ScUndoUseScenario: public ScSimpleUndo
 {
